openshift-oauth-proxy/deployment.yaml
# Copyright (c) 2022 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-policy-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatekeeper-policy-manager
  template:
    metadata:
      labels:
        app: gatekeeper-policy-manager
    spec:
      serviceAccountName: gatekeeper-policy-manager
      containers:
      - name: gatekeeper-policy-manager
        image: quay.io/sighup/gatekeeper-policy-manager
        imagePullPolicy: Always
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
          requests:
            memory: 128Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 3
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          privileged: false
          runAsNonRoot: true
          allowPrivilegeEscalation: false
      - name: oauth-proxy
        image: quay.io/openshift/origin-oauth-proxy
        imagePullPolicy: IfNotPresent
        args:
        - -provider=openshift
        - -pass-basic-auth=false
        - -https-address=:9091
        - -http-address=
        - -email-domain=*
        - -upstream=http://localhost:8080
        - -pass-host-header
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        - -openshift-service-account=gatekeeper-policy-manager
        - -openshift-ca=/etc/pki/tls/cert.pem
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - -openshift-ca=/etc/ocp-injected-certs/ca-bundle.crt
        - -skip-auth-regex=^/metrics
        - '-openshift-sar={"namespace": "openshift-gatekeeper-system", "resource": "services", "verb": "get"}'  # allow user with this access to login
        ports:
        - containerPort: 9091
          name: oauth-proxy
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /oauth/healthz
            port: 9091
            scheme: HTTPS
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /oauth/healthz
            port: 9091
            scheme: HTTPS
          initialDelaySeconds: 5
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /etc/tls/private
          name: oauth-proxy-serving-cert
          readOnly: true
        - mountPath: /etc/proxy/secrets
          name: oauth-proxy-session-secret
          readOnly: true
        - mountPath: /etc/ocp-injected-certs
          name: ocp-injected-certs
      volumes:
      - name: oauth-proxy-serving-cert
        secret:
          defaultMode: 420
          optional: true
          secretName: oauth-proxy-serving-cert
      - name: oauth-proxy-session-secret
        secret:
          defaultMode: 420
          optional: true
          secretName: oauth-proxy-session-secret
      - name: ocp-injected-certs
        configMap:
          defaultMode: 420
          name: ocp-injected-certs
