openshift-oauth-proxy/service.yaml
# Copyright (c) 2022 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: oauth-proxy-serving-cert
  name: gatekeeper-policy-manager
spec:
  type: ClusterIP
  selector:
    app: gatekeeper-policy-manager
  ports:
  - name: oauth-proxy
    port: 9091
    protocol: TCP
    targetPort: oauth-proxy
